# conductor-arch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  Parallel Agents.dc.html  README.md  flake.nix  list_o_problems.md  nfpm.yaml  progress.md
.archductor/: settings.toml
.archductor/prompt-packs/: default.toml
.codex/: AGENTS.md
.context/proofs/: review-thread-proof-20260620161503.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  security.yml  test.yml
.superpowers/sdd/: final-empty-collections-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md
claude/: CLAUDE.md
crates/archcar/: Cargo.toml
crates/archcar/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_sessions.rs  dev_instance_env.rs  makefile_dev.rs  publish_workflow.rs
crates/core/: Cargo.toml
crates/core/src/: agent_tools.rs  chat_store.rs  codex_tui.rs  doctor.rs  env_flags.rs  git_review_service.rs  github_pr.rs  harness.rs  import.rs  lib.rs  linear.rs  local_chat.rs  mcp.rs  paths.rs  platform.rs  provider_capabilities.rs  provider_events.rs  provider_inputs.rs  provider_projection.rs  pty.rs  redaction.rs  repository.rs  runtime_session_store.rs  session_pipeline.rs  settings.rs  storage.rs  terminal_logs.rs  todos.rs  workspace.rs
crates/core/src/archcar/: client.rs  harness.rs  harness_conformance.rs  mod.rs  protocol.rs  server.rs  session.rs  transport.rs
crates/core/src/provider_adapters/: claude_hooks.rs  claude_stream.rs  codex_app_server.rs  mod.rs
crates/core/tests/: pty_parser_fixture_corpus.rs
crates/core/tests/fixtures/: codex_replay_duplicate_screen.txt  codex_tool_skill_file_events.txt
crates/core/tests/fixtures/claude_stream/: basic_turn.jsonl  tools_hooks_limits.jsonl
crates/core/tests/fixtures/pty_corpus/: README.md  manifest.json
crates/core/tests/fixtures/pty_corpus/expected/: failure_command_error.json  failure_trust_prompt.json  interruption_ctrl_c.json  success_ansi_tool_output.json  success_basic_live_answer.json  success_duplicated_repaint.json  success_partial_delayed_chunks.json  success_skill_and_file_change.json
crates/core/tests/fixtures/pty_corpus/raw/: failure_command_error.json  failure_trust_prompt.json  interruption_ctrl_c.json  success_ansi_tool_output.json  success_basic_live_answer.json  success_duplicated_repaint.json  success_partial_delayed_chunks.json  success_skill_and_file_change.json
crates/dev-runner/: Cargo.toml
crates/dev-runner/src/: lib.rs  main.rs  process.rs
crates/gtk-app/: Cargo.toml  build.rs
crates/gtk-app/src/: app_bar.rs  archcar_async.rs  background_chat.rs  background_sync.rs  buttons.rs  command_palette.rs  dashboard.rs  file_component.rs  font_assets.rs  history.rs  logger.rs  main.rs  motion.rs  projects.rs  pty_inspector.rs  refresh.rs  session_surface.rs  settings.rs  setup.rs  sidebar.rs  state.rs  tabs.rs  terminal.rs  text.rs  theme.rs  toast.rs  window_chrome.rs  workspace_command_center.rs
docs/: app-state-refresh-map.md  archductor-docs-parity-map.md  background-chat-update-map.md  codex-claude-archductor-event-map.md  conductor-gui-mvp-handoff.md  deploy-and-local-test.md  gtk-refresh-refactor-map.md  manual-testing-checklist.md  mvp-scope.md  release-readiness.md
docs/superpowers/plans/: 2026-06-21-archductor-docs-parity.md  2026-06-21-ci-cd-hardening.md  2026-06-21-conductor-docs-parity.md  2026-06-21-settings-redesign.md  2026-06-23-agent-harnesses.md  2026-06-23-github-integrations-everywhere.md  2026-06-27-chat-threads-and-codex-resume.md  2026-06-28-archcar-harness-migration.md  2026-06-28-workspace-open-chat-loading-and-archcar-recovery.md  2026-07-01-codex-tools-skills-context-ui.md  2026-07-01-theme-and-icons-refresh.md
docs/superpowers/specs/: 2026-06-21-archductor-docs-parity-design.md  2026-06-21-conductor-docs-parity-design.md  2026-06-21-settings-redesign-design.md  2026-06-23-agent-harnesses-design.md  2026-06-27-agent-session-backend-design.md  2026-06-27-chat-threads-and-codex-resume-design.md  2026-06-28-workspace-open-chat-loading-design.md  (+7 more)
docs/ui-sketches/: linux-archductor-ui-sketches.md
packaging/: README.md  linux-archductor-gtk.desktop  linux-conductor-gtk.desktop
packaging/aur/: PKGBUILD
packaging/flatpak/: ai.perceo.Archductor.yml  io.github.pranavkannepalli.linux-archductor.appdata.xml  io.github.pranavkannepalli.linux-archductor.desktop  io.github.pranavkannepalli.linux-archductor.yml  io.github.pranavkannepalli.linux-conductor.appdata.xml  io.github.pranavkannepalli.linux-conductor.desktop  io.github.pranavkannepalli.linux-conductor.yml
scripts/: dev-instance-env.sh  dev-windows-child.sh  dev-windows.ps1  release-readiness.sh  update-homebrew-formula.sh
tests/: release-readiness-test.sh
(+10 files in other folders)
