[package]
name = "archcar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "archcar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
linux-archductor-core = { path = "../core" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
