[package]
name = "linux-archductor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "linux-archductor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
linux-archductor-core = { path = "../core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
