[package]
name = "linux-conductor-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
globset = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
