[package]
name = "linux-archductor-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
globset = "0.4"
portable-pty = "0.9"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
vt100 = "0.16"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
