[package]
name = "archductor-dev-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "archductor-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1"
archductor-core = { path = "../core" }
crossterm = "0.29"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
