[package]
name = "linux-archductor-gtk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "linux-archductor-gtk"
path = "src/main.rs"

[dependencies]
linux-archductor-core = { path = "../core" }
gtk = { package = "gtk4", version = "0.11" }
adw = { package = "libadwaita", version = "0.9", features = ["v1_4"] }
glib = "0.22"
anyhow = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
notify = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
